add get merchants
